RESOLVED FIXED228077
[GTK][WPE] fix compilation when ATK is not used
https://bugs.webkit.org/show_bug.cgi?id=228077
Summary [GTK][WPE] fix compilation when ATK is not used
Víctor M. Jáquez L.
Reported 2021-07-19 04:05:04 PDT
When compiling in embedded environment I get this error: In file included from DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-7.cpp:8: Source/WebKit/UIProcess/WebPageProxy.cpp: In member function ‘void WebKit::WebPageProxy::swapToProvisionalPage(std::unique_ptr<WebKit::ProvisionalPageProxy>)’: Source/WebKit/UIProcess/WebPageProxy.cpp:975:9: error: ‘bindAccessibilityTree’ was not declared in this scope 975 | bindAccessibilityTree(accessibilityPlugID); | ^~~~~~~~~~~~~~~~~~~~~ It seems r279983 introduced this regression.
Attachments
Patch (3.96 KB, patch)
2021-07-19 04:12 PDT, Víctor M. Jáquez L.
no flags
Patch (3.18 KB, patch)
2021-07-19 07:56 PDT, Víctor M. Jáquez L.
no flags
Patch (3.26 KB, patch)
2021-07-20 01:53 PDT, Víctor M. Jáquez L.
no flags
Víctor M. Jáquez L.
Comment 1 2021-07-19 04:12:00 PDT
Carlos Garcia Campos
Comment 2 2021-07-19 04:59:51 PDT
Right, this is because I changed this in a local branch and I forgot about it. Could you change the ATK ifdef in WebPageProxy.messages.in to PLATFORM GTK or WPE and in WebPageProxyWPE.cpp move the ATK ifdef inside the bindAccessibilityTree() function?
Víctor M. Jáquez L.
Comment 3 2021-07-19 07:56:07 PDT
Carlos Garcia Campos
Comment 4 2021-07-20 01:04:45 PDT
Comment on attachment 433789 [details] Patch Thanks!
EWS
Comment 5 2021-07-20 01:23:36 PDT
Carlos Garcia Campos
Comment 6 2021-07-20 01:25:55 PDT
Comment on attachment 433789 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=433789&action=review > Source/WebKit/UIProcess/WebPageProxy.h:2225 > +#if USE(ATK) > void showEmojiPicker(const WebCore::IntRect&, CompletionHandler<void(String)>&&); > #endif Wait. I didn't notice this. It's an existing issue, but we can fix it now that we are changing it. This should the PLATFORM(GTK) since the emoji picker is GTK specific, it has nothing to do with ATK
Víctor M. Jáquez L.
Comment 7 2021-07-20 01:53:19 PDT
EWS
Comment 8 2021-07-20 02:28:57 PDT
Víctor M. Jáquez L.
Comment 9 2021-07-20 02:44:31 PDT
Comment on attachment 433858 [details] Patch It seems I forgot a step while re-enabling my committer status :S In the meanwhile, Carlos, can you pull the commit-queue knob?
EWS
Comment 10 2021-07-20 03:25:18 PDT
Committed r280074 (239800@main): <https://commits.webkit.org/239800@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433858 [details].
Note You need to log in before you can comment on or make changes to this bug.