[GTK][WPE] Fix compilation when ATK is not used https://bugs.webkit.org/show_bug.cgi?id=228077

Reviewed by Carlos Garcia Campos.

Guard ATK only inside implementations, so the code is more readable.

Also changed guard from ATK to GTK platform showEmojiPicker().

No new tests needed.

* UIProcess/WebPageProxy.h:
* UIProcess/WebPageProxy.messages.in:
* UIProcess/wpe/WebPageProxyWPE.cpp:
(WebKit::WebPageProxy::bindAccessibilityTree):


Canonical link: https://commits.webkit.org/239800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280074 268f45cc-cd09-0410-ab3c-d52691b4dbfc