Source/WebKit/UIProcess/wpe/WebPageProxyWPE.cpp
@@ -45,14 +45,14 @@ struct wpe_view_backend* WebPageProxy::viewBackend()
     return static_cast<PageClientImpl&>(pageClient()).viewBackend();
 }
 
-#if USE(ATK)
 void WebPageProxy::bindAccessibilityTree(const String& plugID)
 {
+#if USE(ATK)
     auto* accessible = static_cast<PageClientImpl&>(pageClient()).accessible();
     atk_socket_embed(ATK_SOCKET(accessible), const_cast<char*>(plugID.utf8().data()));
     atk_object_notify_state_change(accessible, ATK_STATE_TRANSIENT, FALSE);
-}
 #endif
+}
 
 void WebPageProxy::didUpdateEditorState(const EditorState&, const EditorState& newEditorState)
 {
